modify attributes selected

--- a/1/presentation.ipynb
+++ b/1/presentation.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "e50d4f2b",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,27 @@
     "            annot_kws={\"size\": 10}, cmap='coolwarm', ax=ax)\n",
     "plt.xticks(fontsize=10)\n",
     "plt.yticks(fontsize=10)\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "\n",
+    "removed_features = [\n",
+    "    # over 99.5% missing values\n",
+    "    'appCat.weather',     \n",
+    "    'appCat.game',   \n",
+    "    'appCat.unknown',\n",
+    "    'appCat.finance',\n",
+    "\n",
+    "    # correlated features\n",
+    "    'appCat.entertainment',\n",
+    "    'appCat.communication',\n",
+    "    'appCat.other',\n",
+    "    'appCat.social',\n",
+    "\n",
+    "\n",
+    "    # optional removed\n",
+    "    'appCat.utilities'\n",
+    "    'appCat.travel',\n",
+    "    'SMS',\n",
+    "]\n"
    ]
   },
   {
@@ -275,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "id": "ac0355db",
    "metadata": {},
    "outputs": [
@@ -283,27 +303,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "删除的列数: 7\n",
-      "被删除的列: ['appCat.finance', 'appCat.game', 'appCat.travel', 'appCat.unknown', 'appCat.utilities', 'appCat.weather', 'sms']\n",
+      "删除的列数: 4\n",
+      "被删除的列: ['appCat.finance', 'appCat.game', 'appCat.unknown', 'appCat.weather']\n",
       "cleaned_df data: variable\n",
-      "mood                    0.984320\n",
-      "appCat.social           0.946660\n",
-      "activity                0.936017\n",
-      "appCat.communication    0.793060\n",
-      "appCat.builtin          0.745663\n",
-      "screen                  0.730925\n",
-      "id                      0.000000\n",
-      "time                    0.000000\n",
+      "call                  0.985404\n",
+      "circumplex.valence    0.984749\n",
+      "circumplex.arousal    0.984448\n",
+      "mood                  0.984320\n",
+      "appCat.office         0.984281\n",
+      "activity              0.936017\n",
+      "appCat.builtin        0.745663\n",
+      "screen                0.730925\n",
+      "time                  0.000000\n",
+      "id                    0.000000\n",
       "dtype: float64\n",
       "df_daily data: variable\n",
-      "activity                0.397871\n",
-      "mood                    0.357324\n",
-      "date                    0.000000\n",
-      "id                      0.000000\n",
-      "appCat.builtin          0.000000\n",
-      "appCat.communication    0.000000\n",
-      "appCat.social           0.000000\n",
-      "screen                  0.000000\n",
+      "activity              0.397871\n",
+      "circumplex.valence    0.358338\n",
+      "circumplex.arousal    0.357324\n",
+      "mood                  0.357324\n",
+      "date                  0.000000\n",
+      "id                    0.000000\n",
+      "call                  0.000000\n",
+      "appCat.office         0.000000\n",
+      "appCat.builtin        0.000000\n",
+      "screen                0.000000\n",
       "dtype: float64\n"
      ]
     }
@@ -313,8 +337,6 @@
     "features_to_use = [\n",
     "    'screen',\n",
     "    'activity',\n",
-    "    'appCat.builtin',\n",
-    "    'appCat.communication',\n",
     "    'appCat.social',\n",
     "]\n",
     "\n",
@@ -329,14 +351,31 @@
     "    'appCat.office',\n",
     "]\n",
     "\n",
+    "removed_features = [\n",
+    "    # over 99.5% missing values\n",
+    "    'appCat.weather',     \n",
+    "    'appCat.game',   \n",
+    "    'appCat.unknown',\n",
+    "    'appCat.finance',\n",
+    "    # correlated features\n",
+    "    'appCat.entertainment',\n",
+    "    'appCat.communication',\n",
+    "    'appCat.other',\n",
+    "    'appCat.social',\n",
+    "    # optional removed\n",
+    "    'appCat.travel',\n",
+    "    'appCat.utilities',\n",
+    "    'sms',\n",
+    "]\n",
+    "\n",
     "# 加载数据\n",
     "df = data_load.load_mood_dataset(\"./raw_data/dataset_mood_smartphone.csv\")\n",
     "\n",
     "# 删除缺失率高于 99.5% 的列\n",
-    "cleaned_df = processing.drop_high_nan_columns(df, threshold=0.99)\n",
+    "cleaned_df = processing.drop_high_nan_columns(df, threshold=0.995)\n",
     "\n",
     "# 删除 optional_features 中的列\n",
-    "cleaned_df.drop(columns=optional_features, inplace=True, errors='ignore')\n",
+    "cleaned_df.drop(columns=removed_features, inplace=True, errors='ignore')\n",
     "print(\"cleaned_df data:\", cleaned_df.isnull().mean().sort_values(ascending=False))        # 快速了解缺失情况\n",
     "\n",
     "# 并按天聚合的数据\n",
@@ -347,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "id": "6db4e848",
    "metadata": {},
    "outputs": [
@@ -357,14 +396,16 @@
      "text": [
       "原始按天聚合数据共 1973 条\n",
       "保留含有 mood 值的数据共 1268 条\n",
-      "df_daily data: activity                0.09306\n",
-      "id                      0.00000\n",
-      "date                    0.00000\n",
-      "appCat.builtin          0.00000\n",
-      "appCat.communication    0.00000\n",
-      "appCat.social           0.00000\n",
-      "mood                    0.00000\n",
-      "screen                  0.00000\n",
+      "df_daily data: activity              0.093060\n",
+      "circumplex.valence    0.001577\n",
+      "date                  0.000000\n",
+      "id                    0.000000\n",
+      "appCat.office         0.000000\n",
+      "appCat.builtin        0.000000\n",
+      "call                  0.000000\n",
+      "circumplex.arousal    0.000000\n",
+      "mood                  0.000000\n",
+      "screen                0.000000\n",
       "dtype: float64\n"
      ]
     }
@@ -393,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "id": "08f7aa4b",
    "metadata": {},
    "outputs": [
@@ -401,9 +442,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Method 1 shape: (1268, 8)\n",
-      "Method 2 shape: (1268, 8)\n",
-      "Method 3 shape: (1183, 8)\n"
+      "Method 1 shape: (1268, 10)\n",
+      "Method 2 shape: (1268, 10)\n",
+      "Method 3 shape: (1254, 10)\n"
      ]
     },
     {
@@ -494,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "id": "667f6bb4",
    "metadata": {},
    "outputs": [
@@ -509,19 +550,26 @@
       "3  AS14.01 2014-03-29          8.0            6.55            0.106770   \n",
       "4  AS14.01 2014-03-30          7.5            6.95            0.104619   \n",
       "\n",
-      "   appCat.builtin_hist_mean  appCat.communication_hist_mean  \\\n",
-      "0                 1411.3234                       7205.7014   \n",
-      "1                 1016.9792                       7747.2740   \n",
-      "2                 1116.5588                       8141.9928   \n",
-      "3                 2871.8286                       7267.8956   \n",
-      "4                 3088.9634                       5957.9082   \n",
+      "   appCat.builtin_hist_mean  appCat.office_hist_mean  call_hist_mean  \\\n",
+      "0                 1411.3234                  80.7134         5.06250   \n",
+      "1                 1016.9792                  61.4956         4.49375   \n",
+      "2                 1116.5588                  82.7624         4.29375   \n",
+      "3                 2871.8286                  82.7624         4.66250   \n",
+      "4                 3088.9634                  97.3838         3.46250   \n",
       "\n",
-      "   appCat.social_hist_mean  screen_hist_mean  \n",
-      "0                2198.4136        13483.5212  \n",
-      "1                2215.1254        13172.5000  \n",
-      "2                2314.2752        15432.4978  \n",
-      "3                2236.6556        15062.4292  \n",
-      "4                1686.5080        13717.4834  \n",
+      "   circumplex.arousal_hist_mean  circumplex.valence_hist_mean  \\\n",
+      "0                          0.46                      0.549811   \n",
+      "1                          0.38                      0.629811   \n",
+      "2                          0.30                      0.689811   \n",
+      "3                          0.14                      0.649811   \n",
+      "4                          0.02                      0.700000   \n",
+      "\n",
+      "   screen_hist_mean  \n",
+      "0        13483.5212  \n",
+      "1        13172.5000  \n",
+      "2        15432.4978  \n",
+      "3        15062.4292  \n",
+      "4        13717.4834  \n",
       "构造后的样本总数: 1049\n"
      ]
     }
