add mood_type col and algo randomforest

--- a/1/presentation.ipynb
+++ b/1/presentation.ipynb
@@ -589,8 +589,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2b3a1b9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ 成功添加 'mood_type' 列并导出为新的 CSV 文件！\n"
+     ]
+    }
+   ],
+   "source": [
+    "# -*- coding: utf-8 -*-\n",
+    "import pandas as pd\n",
+    "\n",
+    "df1 = pd.read_csv(\"./raw_data/cleaned_data_daily_summary_mood_imputed.csv\")\n",
+    "df2 = pd.read_csv(\"./raw_data/cleaned_data_daily_summary_mood_imputed_sliding_window.csv\")\n",
+    "\n",
+    "# 添加 mood_type 列（使用阈值分段法）\n",
+    "def classify_mood(mood):\n",
+    "    if mood <= 6.0:\n",
+    "        return 0  # 情绪低落\n",
+    "    elif mood <= 7.0:\n",
+    "        return 1  # 情绪中等\n",
+    "    else:\n",
+    "        return 2  # 情绪良好\n",
+    "\n",
+    "df1['mood_type'] = df1['mood'].apply(classify_mood)\n",
+    "df2['mood_type'] = df2['mood_target'].apply(classify_mood)\n",
+    "\n",
+    "# 导出为新的 CSV 文件\n",
+    "df1.to_csv(\"./raw_data/mood_classified.csv\", index=False)\n",
+    "df2.to_csv(\"./raw_data/mood_classified_sliding_window.csv\", index=False)\n",
+    "\n",
+    "print(\"✅ 成功添加 'mood_type' 列并导出为新的 CSV 文件！\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c228fa6a",
    "metadata": {},
    "outputs": [],
    "source": []
