add dataset method 4: interpolation

--- a/1/presentation.ipynb
+++ b/1/presentation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "1fd0aa90",
    "metadata": {},
    "outputs": [],
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "08f7aa4b",
    "metadata": {},
    "outputs": [
@@ -520,7 +520,8 @@
     "df_method1 = imputing.imputing_with_zero(df_daily)\n",
     "df_method2 = imputing.imputing_with_mean(df_daily)\n",
     "df_method3 = imputing.imputing_with_removal_NaN(df_daily)\n",
-    "df_method2.to_csv(\"./raw_data/cleaned_data_daily_summary_mood_imputed.csv\", index=False)\n",
+    "df_method4 = imputing.mood_guided_imputation(df_daily)\n",
+    "df_method4.to_csv(\"./raw_data/cleaned_data_daily_summary_mood_imputed.csv\", index=False)\n",
     "\n",
     "print(\"Method 1 shape:\", df_method1.shape)\n",
     "print(\"Method 2 shape:\", df_method2.shape)\n",
@@ -591,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "2b3a1b9e",
    "metadata": {},
    "outputs": [
