--- a/2/lgbm.ipynb
+++ b/2/lgbm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a70e3a73",
    "metadata": {},
    "outputs": [
@@ -23,6 +23,8 @@
     "import lightgbm as lgb\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import ndcg_score\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
     "\n",
     "\"\"\"\n",
     "Citation: https://www.kaggle.com/code/divyansh22/lgbm-classifier-for-airline-recommendation/notebook\n",
@@ -423,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "5262c7ef",
    "metadata": {},
    "outputs": [],
@@ -436,10 +438,41 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "44e182f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plots ndcg score distribution\n",
+    "ndcg_list = []\n",
+    "for srch_id, group in val_df.groupby('srch_id'):\n",
+    "    y_true = group['label'].values.reshape(1, -1)\n",
+    "    y_score = group['score'].values.reshape(1, -1)\n",
+    "    ndcg_list.append(ndcg_score(y_true, y_score, k=10))\n",
+    "\n",
+    "plt.hist(ndcg_list, bins=20, edgecolor='black')\n",
+    "plt.title(\"NDCG@5 Score Distribution Across Searches\")\n",
+    "plt.xlabel(\"NDCG@5 Score\")\n",
+    "plt.ylabel(\"Frequency\")\n",
+    "plt.savefig('NDCG diistribution.png')\n",
+    "plt.grid()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "86a0c2c5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# plot score distribution per rank position\n",
+    "sns.boxplot(x='rank', y='score', data=val_df[val_df['rank'] <= 10])\n",
+    "plt.title(\"Prediction Score Distribution for Top 10 Ranked Hotels\")\n",
+    "plt.xlabel(\"Rank\")\n",
+    "plt.ylabel(\"Score\")\n",
+    "plt.show()\n",
+    "plt.savefig(\"Prediction Score Distribution.png\")"
+   ]
   }
  ],
  "metadata": {
